css/style.css
html,
body {
  height: 100%;
  width: 100%;
  font-family: 'Roboto', sans-serif;;
}



/* Page Layout (Flexbox) */
  .box {
    display: flex;
    flex-flow: column;
    height: 100%;
  }

  .box .row.header {
    flex: 0 1 30px;
  }

  .box .row.main-container {
    flex: 1 1 auto;
    background-color: #C38181;
  }

  .box .row.footer {
    flex: 0 1 30px;
  }



/* Header */

  header {
    background-color: black;
    display: flex;
    align-items: center;
  }

  header h1 {
    width: 100%;
    text-align: center;
    color: white;
    padding: 5px;
  }



/* Side Navigation Bar */

  /* Menu Toggle (Burger Icon) */
    #menu-button {
      display: inline-block;
      cursor: pointer;
      margin-left: 10px;
      margin-top: 10px;
    }
  
    .bar1, .bar2, .bar3 {
      width: 35px;
      height: 5px;
      background-color: #333;
      margin: 6px 0;
      transition: 0.4s;
    }
    
          /* Rotate first bar */
          .change .bar1 {
            -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
            transform: rotate(-45deg) translate(-9px, 6px) ;
          }
          
          /* Fade out the second bar */
          .change .bar2 {
            opacity: 0;
          }
          
          /* Rotate last bar */
          .change .bar3 {
            -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
            transform: rotate(45deg) translate(-8px, -8px) ;
          }

    /* Position of Side Bar */
    #sidebar {
      position: fixed;
      visibility: hidden;
    }

    nav {
      color: white;
      position: relative;
      z-index: 1;
    }

    /* Side Bar Styling */
    nav ul {
      list-style-type: none;
      text-align: center;
      margin-top: 30px;
      width: 200px;
    }
  
    nav li {
      margin: 25px 10px;
      font-size: 1.2rem;
      background-color: rgba(0,0,0,0.98);
      box-shadow: 0 0 15px black;
      border: 1px solid white;
      border-radius: 15px;
    }
    
    #create-button {
      text-decoration: none;
      color: white;  
      border: none;
      display: block;  
      padding: 15px;
      width: 100%;
      border-radius: 15px;
      font-size: 1.2rem;
      background: none;
    } 
    
    nav a {
      text-decoration: none;
      color: white;  
      display: block;  
      padding: 15px;
    }
  
    /* Hover Effects on Sidebar Elements */
    nav a:hover, nav button:hover  {
      color: #C38181;
      font-size: 1.4rem;
      cursor: pointer;
    }

    nav li:hover {
      box-shadow: 0 0 15px white;
    }
  


/* Cards */

  .cards{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }
  
  /* Styling and Sizing of Entire Card Container */
  .card {
    width: 330px;
    height: 375px;
    box-shadow: 0 10px 10px 0 rgba(0,0,0,0.6);
    transition: 0.3s;
    margin: 25px;
    position: relative;
    border-radius: 10px;
  }
  
  /* Hover Effects for Cards (including pop-out effect) */
  .card:hover {
    box-shadow: -25px -25px rgba(0,0,0,0.75);
    margin: 35px 15px 15px 35px;
    cursor: pointer;
  }

  /* Hover Effect to show Card Status and Edit Icon (pencil) */
  .card:hover .card-status {
    visibility: visible;
  }
  .card:hover .edit-icon {
    visibility: visible;
  }
  
  /* Sizing/Styling of White Main Section of Card */
  .card-container {
    height: 335px;
    background-color: white;
    border-radius: 10px 10px 0px 0px;
  }
  
  /* Edit Icon for Cards (Pencil Image) */
  .edit-icon {
    position: absolute;
    right: 5px;
    top: 5px;
    opacity: 0.7;
    visibility: hidden;
  }


  /* Card Styling and Positioning (for elements inside Main Section [.card-container]) */
  .card h1 {
    font-weight: bold;
    font-size: 2.5rem;
    padding: 10px;
    text-shadow: 2px 2px rgba(0,0,0,0.2);
  } 
  .card-desc {
    text-align: center;
    padding: 10px 0px;
    font-style: italic;
    color: grey;
  }
  .card-status {
    bottom: 40px;
    position: absolute;
    text-align: center;
    width: 100%;
    padding: 5px 0px;
    visibility: hidden;
  }

  /* Card Footer Positioning and Styling */
  .card-footer {
    position: absolute;
    bottom: 0px;
    background-color: black;
    color: white;
    width: 100%;
    height: 40px;
    display: flex;
    justify-content: space-between;
    border-radius: 0px 0px 10px 10px;

  }
  .card-due-date, .card-assignee {
    padding: 10px;
    font-style: italic;
  }


/* Task Form */

#task-form .close-form {
  height: 24px;
  width: 24px;
  position: absolute;
  z-index: 3;
  right: 5px;
  top: 5px;
}

#task-form .close-form:hover {
  cursor: pointer;
}

#task-form {
    display: flex;
    flex-direction: column;
    max-width: 800px;
    width: 80%;
    height: 90%;
    max-height: 900px;
    z-index: 2;
    position: fixed;
    top: 40px;
    left: 100px;
    visibility: hidden;
    background-color: white;
    text-align: center;
    border: 1px solid black;
    border-radius: 10px;
  }

form input, form textarea {
  box-sizing: border-box;
  margin: 5px 0px;
  padding: 10px;
}

.form-row label, .form-row p, .form-row input[type="button"] {
  font-size: 1.5rem;
  font-weight: bold;
  padding: 10px;
}

label[for="form-title"] {
  padding-right: 15px;
}

.form-row {
  width: 100%;
  margin: 10px 0px;
}

#form-assignee, #form-due, #form-status {
  width: 100%;
}

#form-title {
  width: 80%;
}

.middle-form {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  height: 90%;
}

#desc-container {
  width: 60%;
  padding: 10px;
}

#form-desc {
  width: 100%;
  height: 95%;
}

.right-col-form {
  width: 30%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 10px;
}

.form-footer {
  display: flex;
  justify-content: center;
}

.form-footer input[type="button"] {
  width: 100%;
}

input[value="Delete Task"] {
  background-color: firebrick;
  color: white;
  border-radius: 10px;
  margin: 10px;
  width: 100%;
}

input[value="Delete Task"]:hover{
  cursor: pointer;
}

input[value="Save Task"]:hover{
  cursor: pointer;
}

input[value="Save Task"] {
  background-color: green;
  color: white;
  border-radius: 10px;
  margin: 10px;
  width: 100%;
}

/* Toggle Blur Class */
  .blurCards {
    filter: blur(5px);
  };

/* Change form responsiveness on <500px width screens  */
  @media only screen and (max-width: 600px) {
    #desc-container {
      width: 100%;
    }
    
    #task-form textarea {
      height: 70%;
    }

    .right-col-form {
      width: 100%;
    }

    #form-title {
      width: 95%;
    }

    .form-footer {
      display: flex;
      flex-direction: column;
      align-items: center;
    }

    .form-footer input[type="button"] {
      width: 90%;
    }

    #task-form {
      left: 30px;
    }

  }



/* Footer */

    footer {
      background-color: black;   
      text-align: center;
      display: flex;
      align-items: center;
      }
    
      footer ul {
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: space-between;
      }
    
      footer li {
          color: white;
          font-style: italic;
          padding: 5px 5px;
      }

